Adjusted CSS for copy buttons to align then and make them not overflow the body tag when no body was included as well as fixed delete all button's height issue

--- a/src/request_bin.css
+++ b/src/request_bin.css
@@ -61,7 +61,7 @@ main {
   padding-top: 0.22rem;
   display: table;
   width: 40%;
-  min-height: calc(100% + 16px);
+  min-height: calc(100% + 1rem);
   height: auto;
   border-right: 1px solid #9A8C98;
   background-color: #F2E9E4;
@@ -160,6 +160,7 @@ td, li, #request-content-header {
   box-sizing: border-box;
   width: 100%;
   border-top: 1px solid lightgrey;
+  height: 1rem;
 }
 
 #delete-all span {
@@ -208,9 +209,10 @@ td, li, #request-content-header {
 
 .copy-data {
   position: relative;
+  font-size: 0.95rem;
   float: right;
   right: 0.7rem;
-  top: 0.7rem;
+  top: 0.35rem;
   height: 1rem;
   width: 1rem;
   color: #9A8C98;
@@ -387,4 +389,12 @@ li > div {
 
 .hidden {
   display: none;
+}
+
+#query-row {
+  border-top: 1px solid lightgrey;
+}
+
+#request-queries {
+  margin-right: 0.5rem;
 }
